[package]
name = "shannon-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
shannon-core = { path = "../shannon-core" }
shannon-tool-interface = { path = "../shannon-tool-interface" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
dashmap = "6.1"

# MCP transport dependencies
tokio-tungstenite = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
# Testing dependencies
tempfile = "3.15"
futures-util = { workspace = true }
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "protocol_benchmarks"
harness = false
