[package]
name = "shannon-tools"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client for web operations
reqwest = { version = "0.12", features = ["json"] }

# Async traits
async-trait = "0.1"

# File pattern matching
glob = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
