[package]
name = "shannon-tools"
version.workspace = true
edition.workspace = true

[dependencies]
# Core types and traits
shannon-core = { path = "../shannon-core" }
shannon-types = { path = "../shannon-types" }
shannon-mcp = { path = "../shannon-mcp" }
shannon-agents = { path = "../shannon-agents" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client for web operations
reqwest = { workspace = true }

# Async traits
async-trait = "0.1"

# File pattern matching
glob = "0.3"

# Regex for content search
regex = "1"

# File traversal (respects .gitignore)
ignore = "0.4"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding for image data
base64 = "0.22"

# Directory paths
dirs = { workspace = true }

# SHA-256 hashing for content deduplication
sha2 = "0.10"

# Shell command parsing for security
shell-words = "1.1"

# PTY support for interactive commands
portable-pty = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockito = "1.6"
serde_json = "1"
criterion = "0.5"
globset = "0.4"
regex = "1"
ignore = "0.4"
proptest = { workspace = true }

[[bench]]
name = "tool_benchmarks"
harness = false

[[bench]]
name = "edit_bench"
harness = false
