[package]
name = "shannon-types"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "0.8", default-features = false, features = ["derive"] }
