[package]
name = "shannon-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
shannon-core = { path = "../shannon-core" }
shannon-agents = { path = "../shannon-agents" }
shannon-commands = { path = "../shannon-commands" }
shannon-tools = { path = "../shannon-tools" }
shannon-mcp = { path = "../shannon-mcp" }
shannon-skills = { path = "../shannon-skills" }
shannon-types = { path = "../shannon-types" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
unicode-width = "0.2"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
atty = "0.2"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
dirs = "5.0"
rust-i18n = { workspace = true }
base64 = "0.22"
